--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
 			</plugin>
 			
 </plugins>
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.2.3</version> <!-- Update to a compatible version -->
+    </plugin>
 	</build>
 	
 	
