--- a/pom.xml
+++ b/pom.xml
@@ -97,14 +97,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://172.31.9.109:9980/mithuntechnologies/repository/facebook-release/</url>
+	      <name>web application releases Nexus Repository</name>
+	      <url>http://65.1.106.106:9980/lohithnexus/repository/web-application-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://172.31.9.109:9980/mithuntechnologies/repository/facebook-snapshot/</url>
+	      <url>http://65.1.106.106:9980/lohithnexus/repository/web-application-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
