--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.7.66.16:9000</sonar.host.url>
+		<sonar.host.url>http://15.206.187.21:9000</sonar.host.url>
 		<sonar.login>sqa_f0367fe1542ef6776477a57dc299a2c129628f0a</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>web application releases Nexus Repository</name>
-	      <url>http://65.1.106.106:9980/lohithnexus/repository/web-application-release/</url>
+	      <url>http://3.108.59.130:9980/lohithnexus/repository/web-application-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://65.1.106.106:9980/lohithnexus/repository/web-application-snapshot/</url>
+	      <url>http://3.108.59.130:9980/lohithnexus/repository/web-application-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
