--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://3.109.48.191:9000/</sonar.host.url>
-		<sonar.login>sqa_c89e1a6d92494d36c5e11fcaa72977742ac5f153</sonar.login>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>lohithkj</sonar.password>
+		<!-- <sonar.login>sqa_c89e1a6d92494d36c5e11fcaa72977742ac5f153</sonar.login> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
                 <maven.compiler.source>1.8</maven.compiler.source>
