--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://52.66.196.234:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>lohithkj</sonar.password> 
+		<sonar.password>Lohithkj</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
